Swagger Node Server Updates to work with Live Data
