# nodejs-server/controllers/Products.js
@@ -7,28 +7,24 @@ var Products = require('./ProductsService');
 
 
 module.exports.productsGet = function productsGet (req, res, next) {
-  
-
-  var result = Products.productsGet();
-
-  if(typeof result !== 'undefined') {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(result || {}, null, 2));
-  }
-  else
-    res.end();
+  Products.productsGet(function(err, result){
+  	if(typeof result !== 'undefined') {
+    		res.setHeader('Content-Type', 'application/json');
+    		res.end(JSON.stringify(result || {}, null, 2));
+  	}
+  	else
+    		res.end();
+  });
 };
 
 module.exports.productsProductIDGet = function productsProductIDGet (req, res, next) {
   var productID = req.swagger.params['productID'].value;
-  
-
-  var result = Products.productsProductIDGet(productID);
-
-  if(typeof result !== 'undefined') {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(result || {}, null, 2));
-  }
-  else
-    res.end();
+  Products.productsProductIDGet(productID,function(err, result){
+        if(typeof result !== 'undefined') {
+                res.setHeader('Content-Type', 'application/json');
+                res.end(JSON.stringify(result || {}, null, 2));
+        }
+        else
+                res.end();
+  });
 };
