# nodejs-server/controllers/ProductsService.js
@@ -1,36 +1,15 @@
 'use strict';
 
-exports.productsGet = function() {
+var Product = require('../models/Product.js');
 
-  var examples = {};
-  
-  examples['application/json'] = [ {
-  "product_id" : 123,
-  "available" : "aeiou",
-  "description" : "aeiou",
-  "display_name" : "aeiou"
-} ];
-  
-
-  
-  if(Object.keys(examples).length > 0)
-    return examples[Object.keys(examples)[0]];
-  
+exports.productsGet = function(callback) {
+  	Product.getAll(function(err, products){
+  		callback(err, products);
+  	});
 }
-exports.productsProductIDGet = function(productID) {
 
-  var examples = {};
-  
-  examples['application/json'] = [ {
-  "product_id" : 123,
-  "available" : "aeiou",
-  "description" : "aeiou",
-  "display_name" : "aeiou"
-} ];
-  
-
-  
-  if(Object.keys(examples).length > 0)
-    return examples[Object.keys(examples)[0]];
-  
+exports.productsProductIDGet = function(productID,callback) {
+	Product.getById(productID, function(err,products) {
+		callback(err,products);
+	}); 
 }
